# Lattic-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: bg.fs  sky.fs  sky.vs  star_skybox.fs  star_skybox.vs
include/: lauxlib.h  lualib.h  raygui.h  uthash.h
scripts/: astroidbelt.lua  aura_ring.lua  chaos_galaxy.lua  disk.lua  dna.lua  idk.lua  main.lua  milkyway.lua  singularity_stream.lua  stressTestExample.lua  supernova.lua  tidal_disk.lua
src/: app.c  app.h  assetmanager.c  assetmanager.h  camera.c  camera.h  core.c  core.h  game.c  game.h  log.c  log.h  main.c  planet.c  planet.h  scriptdb.h  texture_streamer.c  texture_streamer.h  timer.c  timer.h  ui.c  world.c  world.h
src/assets/: assetmanager.c  assetmanager.h  shadermanager.c  shadermanager.h  skybox.c  skybox.h  texture_streamer.c  texture_streamer.h
src/luaapi/: luaapi.c  luaapi.h
src/platform/: platform_win32.c  platform_win32.h  platform_win32_threading.c  platform_win32_threading.h
src/ui/: ui.c  ui.h  ui_widgets.c  ui_widgets.h
tools/: gen_key.py
